Made the movable dummy routine item change size when needed. Made the item being dragged stay partially visible (25%). Fixed 2 more bugs related to dragging exercises (0 opacity and ghost-state)

--- a/src/Components/WorkoutsContainer/CreateRoutine/RoutineItem/RoutineItem.scss
+++ b/src/Components/WorkoutsContainer/CreateRoutine/RoutineItem/RoutineItem.scss
@@ -6,6 +6,12 @@
   border-radius: 1.5rem;
   min-height: 19rem;
   height: auto;
+
+  &.dragging {
+    opacity: 0.25;
+    pointer-events: none;
+    transition: opacity 0.1ms;
+  }
 }
 
 .routine-item-header {
@@ -68,7 +74,7 @@
       border-radius: 0 0 1rem 1rem;
     }
   }
-  
+
   & .hidden {
     font-size: 0px;
     width: 7rem;
